plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.househub'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'jakarta.validation:jakarta.validation-api'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.session:spring-session-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail' // 이메일 발송 의존성 추가
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation("org.springframework.security:spring-security-test")
    testImplementation 'org.mockito:mockito-junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-mail'


    //엑셀 파싱 관련 의존성
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.20.0'

    // 스프링 배치 코어
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // 배치 테스트 지원
    testImplementation 'org.springframework.batch:spring-batch-test'

    // Quartz 스케줄러 (필요시)
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    // querydsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

tasks.named('test') {
    useJUnitPlatform()
}

// QueryDSL Q-Class 생성 디렉토리 설정
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:deprecation"
    // JavaCompile Task를 수행하는 경우 생성될 소스코드의 출력 디렉토리를 queryDsLSrcDr로 설정
    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

// 소스 코드로 인식할 디렉토리에 경로에 Q-Class 파일 추가
// Q-Class가 일반 Java 클래스처럼 취급되어 컴파일과 실행 시 클래스패스에 포함
sourceSets {
    main {
        java {
            srcDirs += [querydslDir]
        }
    }
}

// clean Task 수행하는 경우 지정한 디렉토리를 삭제하도록 설정 : 자동 생성된 Q-Class 제거
clean {
    delete file(querydslDir)
}

//querydsl {
//    jpa = true
//    querydslSourcesDir = querydslDir
//    includedPackages = ['com.example.domain.query'] // 특정 패키지만 지정
//}

